[project]
name = "nonebot_plugin_quote_replier"
version = "0.1.0"
description = "nonebot_plugin_quote_replier"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "nonebot2[fastapi]>=2.4.4",
    "nonebot-adapter-onebot>=2.4.6",
    "rapidocr-onnxruntime>=1.3.26",
]

[project.optional-dependencies]
dev = [
    "pyright[nodejs]"
]

[project.dependency-groups]
dev = [
    "pyright",
]
[tool.nonebot]
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []

[tool.pyright]
# For Pylance/Pyright configurations, see https://microsoft.github.io/pyright/#/configuration.
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
extraPaths = ["src/plugins"]
executionEnvironments = [
    { root = "src/plugins" }
]
